Bug fix to service item boxes
Fixed a bug causing the service item boxes to overlap on smaller displays.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -276,8 +276,9 @@ h6,
 /*** Service ***/
 .service-item {
     position: relative;
-    height: 350px;
-    padding: 30px 25px;
+    height: auto;
+    min-height: 400px;
+    padding: 25px 25px;
     background: #2a293e;
     box-shadow: 0 0 45px rgba(0, 0, 0, .08);
     transition: .5s;
@@ -353,7 +354,6 @@ h6,
     font-weight: 500;
     width: 75px;
     border-radius: 100px;
-    margin-right: 75%;
 }
 
 .service-tag-paid {
@@ -363,7 +363,6 @@ h6,
     font-weight: 500;
     width: 100px;
     border-radius: 100px;
-    margin-right: 65%;
 }
 
 
